.cloud/kubernetes/traefik/dashboard/traefik-dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: traefik-dashboard
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: dashboard
  type: LoadBalancer
